--- a/home.html
+++ b/home.html
@@ -26,7 +26,8 @@
     <a href="home.html">Home</a>
     <a href="details.html">Details</a>
     <a href="matting.html">Mats</a>
-    <img class="a" src="vistingcard.JPG">
+    <img class="a" src="vistingcard.jpg">
 </body>
 
 </html>
+
